--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,6 +36,11 @@ section {
     .detailedWeather {
         height: 400px;
         border: 1px solid green;
+        table {
+            width: 100%;
+            height: 100%;
+            font-size: 1.5em;
+        }
     }
     &.googleMap {
         display: none;
@@ -44,6 +49,44 @@ section {
         margin-top: 25px;
         height: 450px; // POPRAWIC na vh, żeby dopasowywało się do odbiornika
         border: 1px solid green;
+    }
+}
+
+@media (min-width: 768px) {
+    .shortWeather {
+        
+    }
+    section {
+        &.shortWeather {
+            height: 30vh;
+            background-color: palevioletred;
+            .mainPicture {
+                margin-top: 20px;
+                height: 100px;
+                background-size: 50%;
+            }
+            .temperature {
+                margin-top: 10px;
+                font-size: 2.5em;
+            }
+            .cityName {
+                margin-top: 10px;
+                font-size: 2.5em;
+            }
+            button {
+                display: none;
+            }
+        }
+        &.longWeather {
+            height: 50vh;
+            display: block;
+            .cityName {
+                display: none;
+            }
+            button {
+                display: none;
+            }
+        }
     }
 }
 
