buttons changes form forecast to daily

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -190,9 +190,9 @@ section {
         }
         
     }
-    footer {
-        display: none;
-    }
+//    footer {
+//        display: none;
+//    }
 }
 
 .show {
