view for 5 days forecast HTML, CSS

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,6 +123,32 @@
                     <div class="col-xs-1 col-sm-2"></div>
                 </div>
             </section>
+            
+            <section class="container fiveDaysWeather">
+                <div class="row">
+                    <div class="col-xs-1 col-sm-2 col-lg-3"></div>
+                    <div class="col-xs-10 col-sm-8 col-lg-9">
+                        <p class="text-center cityName">Mozambik</p>
+                        <div class="detailedWeather">
+                            <table class="table-striped fiveDaysTable">
+<!--
+                                <tr>
+                                    <td><span class="hour">12:00</span></td>
+                                    <td><span class="hourIcon"></span></td>
+                                    <td><span class="hourTemp">18</span>&deg;C</td>
+                                </tr>
+-->
+                            </table>
+                        </div>
+<!--
+                        <button type="button" class="btn btn-primary btn-lg center-block showLess">
+                            BACK <span class="glyphicon glyphicon-chevron-up"></span>
+                        </button>
+-->
+                    </div>
+                    <div class="col-xs-1 col-sm-2"></div>
+                </div>
+            </section>
         </article>
         
         <footer class="container navbar-fixed-bottom">
