--- a/scss/style.scss
+++ b/scss/style.scss
@@ -70,9 +70,9 @@ section {
         width: 100%;
         //border: 1px solid green;
     }
-    &.hourlyWeather {
+    &.hourlyWeather, &.fiveDaysWeather {
         display: none;
-        .hourIcon {
+        .hourIcon, .fiveDaysIcon {
             width: 50px;
             height: 50px;
             display: block;
