buttons to switch view between hourly and 5 days views

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,11 +114,9 @@
 -->
                             </table>
                         </div>
-<!--
-                        <button type="button" class="btn btn-primary btn-lg center-block showLess">
-                            BACK <span class="glyphicon glyphicon-chevron-up"></span>
+                        <button type="button" class="btn btn-primary btn-lg center-block show5Days">
+                            5 DAYS <span class="glyphicon glyphicon-chevron-up"></span>
                         </button>
--->
                     </div>
                     <div class="col-xs-1 col-sm-2"></div>
                 </div>
@@ -140,11 +138,9 @@
 -->
                             </table>
                         </div>
-<!--
-                        <button type="button" class="btn btn-primary btn-lg center-block showLess">
-                            BACK <span class="glyphicon glyphicon-chevron-up"></span>
+                        <button type="button" class="btn btn-primary btn-lg center-block showHourly">
+                            HOURLY <span class="glyphicon glyphicon-chevron-up"></span>
                         </button>
--->
                     </div>
                     <div class="col-xs-1 col-sm-2"></div>
                 </div>
