fixed map button for new views on mobile and reduce surplus code

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,7 +115,7 @@
                             </table>
                         </div>
                         <button type="button" class="btn btn-primary btn-lg center-block show5Days">
-                            5 DAYS <span class="glyphicon glyphicon-chevron-up"></span>
+                            5 DAYS 
                         </button>
                     </div>
                     <div class="col-xs-1 col-sm-2"></div>
@@ -139,7 +139,7 @@
                             </table>
                         </div>
                         <button type="button" class="btn btn-primary btn-lg center-block showHourly">
-                            HOURLY <span class="glyphicon glyphicon-chevron-up"></span>
+                            HOURLY 
                         </button>
                     </div>
                     <div class="col-xs-1 col-sm-2"></div>
