--- a/views/index.ejs
+++ b/views/index.ejs
@@ -103,7 +103,7 @@
                     <div class="col-xs-1 col-sm-2 col-lg-3"></div>
                     <div class="col-xs-10 col-sm-8 col-lg-9">
                         <p class="text-center cityName">Mozambik</p>
-                        <div class="detailedWeather">
+                        <div class="tableWeather">
                             <table class="table-striped hourlyTable">
 <!--
                                 <tr>
@@ -127,7 +127,7 @@
                     <div class="col-xs-1 col-sm-2 col-lg-3"></div>
                     <div class="col-xs-10 col-sm-8 col-lg-9">
                         <p class="text-center cityName">Mozambik</p>
-                        <div class="detailedWeather">
+                        <div class="tableWeather">
                             <table class="table-striped fiveDaysTable">
 <!--
                                 <tr>
