--- a/scss/style.scss
+++ b/scss/style.scss
@@ -174,6 +174,7 @@ section {
 @media (min-width: 992px) {
     article {
         &.weatherArticle{
+            height: 90vh;
             width: 35vw;
             section {
                 .row {
@@ -185,6 +186,7 @@ section {
             }
         }
         &.mapArticle {
+            height: 90vh;
             width: 60vw;
              section {
                  .row {
@@ -194,7 +196,7 @@ section {
                     width: 60vw;
                 }
             }
-        } 
+        }
     }
     section {
         &.googleMap {
@@ -237,11 +239,20 @@ section {
                 display: none;
             }
         }
+        &.hourlyWeather, &.fiveDaysWeather {
+            width: 45vw;
+            height: 95vh;
+            display: block;
+        }
+//        &.fiveDaysWeather {
+//            width: 45vw;
+//            display: block;
+//        }
         
     }
-//    footer {
-//        display: none;
-//    }
+    footer {
+        display: none;
+    }
 }
 
 .show {
