information about author

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -154,6 +154,7 @@
                     <button type="button" class="btn btn-default mapBtn btnFooter"> MAP <span class="glyphicon glyphicon-globe"></span></button>
                 </div>
             </div>
+            <div id="author">Author: PolishCodeGirl / Marzena Małachowska</div>
         </footer>
         
         
