--- a/scss/style.scss
+++ b/scss/style.scss
@@ -89,6 +89,14 @@ section {
     }
 }
 
+footer {
+    #author {
+        font-size: 0.9em;
+        text-align: center;
+        margin-top: 5px;
+    }
+}
+
 @media (min-width: 768px) {
     article {
         &.weatherArticle {
@@ -256,7 +264,12 @@ section {
         
     }
     footer {
-        display: none;
+        .text-center {
+            display: none;
+        }
+        #author {
+            position: relative;
+        }
     }
 }
 
