--- a/scss/style.scss
+++ b/scss/style.scss
@@ -148,20 +148,23 @@ footer {
             }
         }
         &.hourlyWeather {
-            height: 45vh;
+            height: 40vh;
+            .cityName {
+                margin-top: -25px;
+            }
             button {
                 display: none;
             }
             .tableWeather {
-                height: 35vh;
+                height: 30vh;
                 table {
-                    height: 35vh;
+                    height: 30vh;
                     font-size: 1.5em;
                 }
             }
         }
         &.fiveDaysWeather {
-            height: 45vh;
+            height: 40vh;
             .cityName {
                 display: none;
             }
@@ -169,9 +172,9 @@ footer {
                 display: none;
             }
             .tableWeather {
-                height: 35vh;
+                height: 30vh;
                 table {
-                    height: 35vh;
+                    height: 30vh;
                     font-size: 1.5em;
                 }
             }
