--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,6 +86,7 @@
                         <input id="pac-input" class="controls form-control" type="text" placeholder="Search Box">
                     </div>
 -->
+                    <p class="text-center cityName">Mozambik</p>
                     <div id="map"></div>
                     <button type="button" class="btn btn-primary btn-lg center-block showLess">
                         BACK <span class="glyphicon glyphicon-chevron-up"></span>
